--- a/front/react-project/public/index.html
+++ b/front/react-project/public/index.html
@@ -6,9 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="プログラミング言語「WritingPaper」のオンライン実行環境です。"
     />
-    <title>React App</title>
+    <title>WritingPaper</title>
   </head>
   <body>
     <div id="root"></div>
