--- a/front/react-project/public/index.html
+++ b/front/react-project/public/index.html
@@ -9,6 +9,7 @@
       content="プログラミング言語「WritingPaper」のオンライン実行環境です。"
     />
     <title>WritingPaper</title>
+    <link rel="icon" href="wp-logo.png">
   </head>
   <body>
     <div id="root"></div>
